[package]
name = "near_event_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
near-jsonrpc-client = "0.13.0"
near-primitives = "0.26.0"
near-sdk = "5.5.0"
near-jsonrpc-primitives = "0.26.0"
serde_json = "1.0.132"
thiserror = "2.0.3"
serde = "1.0.214"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"]}

[dev-dependencies]
mockall = "0.13.0"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"]}
near-workspaces = "0.14.1"
anyhow = "1.0.93"
near-gas = "0.3.0"
near-crypto = "0.26.0"
borsh = "1.5.3"